<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.UserDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tell us about you..."
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="29dp" />

        <TextView
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="First Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Enter your First Name"
            android:inputType="text"
            android:padding="12dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Last Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Enter your Last Name"
            android:inputType="text"
            android:padding="12dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/DOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Date of Birth"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true" />


        <TextView
            android:id="@+id/Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Gender"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/GenderPicker"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/Other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Other"
                tools:ignore="TouchTargetSizeCheck" />


        </RadioGroup>
        <!--

            <TableLayout
                android:id="@+id/HeightWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:shrinkColumns="*"
                android:stretchColumns="*">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/Height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Height (cm)"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/Weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Weight (kg)"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <NumberPicker
                        android:id="@+id/HeightNumberPicker"
                        android:layout_width="match_parent"
                        android:layout_height="76dp" />


                    <NumberPicker
                        android:id="@+id/WeightNumberPicker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableRow>

            </TableLayout>
         -->


        <TextView
            android:id="@+id/BloodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blood Type"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/BloodTypes"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/add_a_description"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/savebutton"
            style="@android:style/Widget.Button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_bg"
            android:letterSpacing="0.2"
            android:text="SAVE"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
