...
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
...
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Enter your password"
            android:inputType="textPassword"
...
            android:layout_marginTop="5dp"
            android:text="Forgot Password?"
            android:textAlignment="center"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Loginbutton"
            style="@android:style/Widget.Button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_bg"
...
